--- a/src/component/AboutUs/AboutUS.css
+++ b/src/component/AboutUs/AboutUS.css
@@ -2,7 +2,7 @@
     background-image: url("https://i.ibb.co/bmJJnRb/d-6.jpg"),
     linear-gradient(rgba(0, 0, 0, 0.319), rgba(0, 0, 0, 0.456));
     width: 100%;
-    height: 730px;
+    height: 980px;
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,4 +11,28 @@
 .about-des{
     display: flex;
     align-items: center;
+}
+.overflow{
+    overflow-x: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+    .about {
+    /* The file size of this background image is 93% smaller
+    to improve page load speed on mobile internet connections */
+    background-image: url("https://i.ibb.co/bmJJnRb/d-6.jpg");
+   
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 525px;
+    }
+
+    .text-style{
+        display: block;
+        
+    }
 }
